--- a/articles_parsed_with_html/baltimore-fire-children.html
+++ b/articles_parsed_with_html/baltimore-fire-children.html
@@ -31,17 +31,15 @@
 </figcaption>
 </figure>
 <p class="story-body-text story-content" data-para-count="164" data-total-count="164">BALTIMORE — The bodies of six children were recovered after a fire engulfed a house in the northeast section of Baltimore early on Thursday, a fire official said.</p><p class="story-body-text story-content" data-para-count="300" data-total-count="464">Their mother and her three other children escaped the home and were being treated at a hospital, said Chief Roman Clark, a spokesman for the Baltimore City Fire Department. A 9-month-old boy, a 2-year-old boy, two 3-year-old twin girls, and two other girls, ages 10 and 11, died in the fire, he said.</p><p class="story-body-text story-content" data-para-count="148" data-total-count="612">One of the children who was hospitalized, an 8-year-old girl, had helped her 4- and 5-year-old siblings flee, Chief Clark said at a news conference.</p><p class="story-body-text story-content" data-para-count="284" data-total-count="896">Representative Elijah E. Cummings, Democrat of Maryland, identified the mother as Katie Malone, who has worked in his Catonsville office for nearly 11 years. “She dutifully serves my constituents in the areas of immigration, postal services and the military,” he said in an email.</p><div class="story-ad ad ad-placeholder nocontent robots-nocontent " id="story-ad-1">
-<div class="accessibility-ad-header visually-hidden">
-<p>Advertisement</p>
+
+
 </div>
-<a class="visually-hidden skip-to-text-link" href="#story-continues-1">Continue reading the main story</a>
-</div>
-<p class="story-body-text story-content" data-para-count="170" data-total-count="1066" id="story-continues-1">Mr. Cummings and Chief Clark said Ms. Malone was the mother of the nine children. Mr. Cummings told reporters at an event in Baltimore that he had spoken with her family.</p> <a class="visually-hidden skip-to-text-link" href="#story-continues-2">Continue reading the main story</a>
+<p class="story-body-text story-content" data-para-count="170" data-total-count="1066" id="story-continues-1">Mr. Cummings and Chief Clark said Ms. Malone was the mother of the nine children. Mr. Cummings told reporters at an event in Baltimore that he had spoken with her family.</p> 
 </div>
 <div class="story-body story-body-2">
 <p class="story-body-text story-content" data-para-count="164" data-total-count="1230" id="story-continues-3">“They’re still trying to wrap their arms around this, but we have made clear our office is going to do every single thing in our power” to help them, he said.</p><p class="story-body-text story-content" data-para-count="84" data-total-count="1314">Chief Clark said the father of the children had been at work when the fire happened.</p><p class="story-body-text story-content" data-para-count="225" data-total-count="1539">Firefighters arrived at the house, in the Cedmont neighborhood, at about 12:30 a.m. and saw the three-story building on fire. Chief Clark said the third floor had collapsed onto the second, and then the second onto the first.</p><div aria-labeledby="newsletter-promo-heading" class="newsletter-signup hidden auto-newsletter variant-1-hidden " data-newsletter-productcode="" data-newsletter-producttitle="" id="newsletter-promo">
 <h2 class="visually-hidden" id="newsletter-promo-heading">Newsletter Sign Up</h2>
-<a class="visually-hidden skip-to-text-link" href="#continues-post-newsletter">Continue reading the main story</a>
+
 
 <h3 class="headline"></h3> <p class="summary"></p> <form autocomplete="off" class="newsletter-form" method="post" name="regilite">
 <div class="control input-control">
@@ -51,14 +49,14 @@
 <p class="error buffet-error hidden">You must select a newsletter to subscribe to.</p>
 </div>
 <div class="field-container">
-<input aria-required="true" class="email-input" id="email" name="email" placeholder="Enter your email address" type="email" value=""/>
+<input aria-required="true" class="email-input" id="email" name="email" placeholder="Enter your email address" type="email" value="">
 <button class="button submit-button" id="submit-button" type="submit">Sign Up</button>
-</div>
+</input></div>
 </div><!-- close control -->
 <div class="control checkbox-control">
 <div class="field-container">
-<input class="checkbox" id="special-offers" name="special-offers" type="checkbox" value="MM"/>
-</div>
+<input class="checkbox" id="special-offers" name="special-offers" type="checkbox" value="MM">
+</input></div>
 <div class="label-container">
 <label class="checkbox-label" for="special-offers">You agree to receive occasional updates and special offers for The New York Times's products and services.</label>
 </div>
@@ -89,5 +87,5 @@
 </p>
 </div><!-- close story-meta -->
 </footer>
-<a class="visually-hidden skip-to-text-link" href="#whats-next">Continue reading the main story</a>
+
 </div>
