--- a/articles_parsed_with_html/fbi-hate-crimes-muslims.html
+++ b/articles_parsed_with_html/fbi-hate-crimes-muslims.html
@@ -1,13 +1,11 @@
 <div class="story-body story-body-1">
 <p class="story-body-text story-content" data-para-count="159" data-total-count="159">WASHINGTON — The <a class="meta-org" href="http://topics.nytimes.com/top/reference/timestopics/organizations/f/federal_bureau_of_investigation/index.html?inline=nyt-org" title="More articles about the Federal Bureau of Investigation.">F.B.I.</a> reported Monday that attacks against American Muslims surged last year, driving an overall increase in hate crime against all groups.</p><p class="story-body-text story-content" data-para-count="324" data-total-count="483">The <a href="https://ucr.fbi.gov/hate-crime/20150">data</a>, which is the most comprehensive look at hate crime nationwide, expanded on previous findings by researchers and outside monitors, who have noted an alarming rise in some types of crimes tied to the vitriol of this year’s presidential campaign and the aftermath of <a href="http://nyti.ms/2cfZAzu">terrorist attacks at home and abroad since 2015</a>.</p><p class="story-body-text story-content" data-para-count="241" data-total-count="724">That trend <a href="http://nyti.ms/2eS2tb6">appears to have spiked</a> in just the last week, with civil rights groups and news organizations reporting dozens of verbal or physical assaults on minorities and others that appear to have been fueled by divisions over the election.</p><p class="story-body-text story-content" data-para-count="247" data-total-count="971">In its report on Monday, the F.B.I. cataloged a total of 5,818 hate crimes in 2015 — a rise of about 6 percent over the previous year — including assaults, bombings, threats, and property destruction against minorities, women, gays and others.</p><div class="story-ad ad ad-placeholder nocontent robots-nocontent " id="story-ad-1">
-<div class="accessibility-ad-header visually-hidden">
-<p>Advertisement</p>
-</div>
-<a class="visually-hidden skip-to-text-link" href="#story-continues-1">Continue reading the main story</a>
+
+
 </div>
 <p class="story-body-text story-content" data-para-count="312" data-total-count="1283" id="story-continues-1">Attacks against Muslim Americans saw the biggest surge. There were 257 reports of assaults, attacks on mosques and other hate crimes against Muslims last year, a jump of about 67 percent over 2014. It was the highest total since 2001, when more than 480 attacks occurred in the aftermath of the Sept. 11 attacks.</p><div aria-labeledby="newsletter-promo-heading" class="newsletter-signup variant-1-hidden " data-newsletter-productcode="RR" data-newsletter-producttitle="Race Related" id="newsletter-promo">
 <h2 class="visually-hidden" id="newsletter-promo-heading">Newsletter Sign Up</h2>
-<a class="visually-hidden skip-to-text-link" href="#continues-post-newsletter">Continue reading the main story</a>
+
 <h3 class="headline">Sign Up for the Race/Related Newsletter</h3> <p class="summary">Join a deep and provocative exploration of race with a diverse group of New York Times journalists.</p> <form autocomplete="off" class="newsletter-form" method="post" name="regilite">
 <div class="control input-control">
 <div class="form-errors">
@@ -16,14 +14,14 @@
 <p class="error buffet-error hidden">You must select a newsletter to subscribe to.</p>
 </div>
 <div class="field-container">
-<input aria-required="true" class="email-input" id="email" name="email" placeholder="Enter your email address" type="email" value=""/>
+<input aria-required="true" class="email-input" id="email" name="email" placeholder="Enter your email address" type="email" value="">
 <button class="button submit-button" id="submit-button" type="submit">Sign Up</button>
-</div>
+</input></div>
 </div><!-- close control -->
 <div class="control checkbox-control">
 <div class="field-container">
-<input class="checkbox" id="special-offers" name="special-offers" type="checkbox" value="MM"/>
-</div>
+<input class="checkbox" id="special-offers" name="special-offers" type="checkbox" value="MM">
+</input></div>
 <div class="label-container">
 <label class="checkbox-label" for="special-offers">You agree to receive occasional updates and special offers for The New York Times's products and services.</label>
 </div>
@@ -46,7 +44,7 @@
 
 </div>
 <div id="#continues-post-newsletter"></div>
-<p class="story-body-text story-content" data-para-count="58" data-total-count="1341">Attacks against transgender people also sharply increased.</p><p class="story-body-text story-content" data-para-count="281" data-total-count="1622">Blacks were the most frequent victims of hate crimes based on race, while Jews were the most frequent victims based on religion, according to the F.B.I. data. But the increases in attacks on these groups were smaller than the rise in attacks against Muslims and transgender people.</p> <a class="visually-hidden skip-to-text-link" href="#story-continues-2">Continue reading the main story</a>
+<p class="story-body-text story-content" data-para-count="58" data-total-count="1341">Attacks against transgender people also sharply increased.</p><p class="story-body-text story-content" data-para-count="281" data-total-count="1622">Blacks were the most frequent victims of hate crimes based on race, while Jews were the most frequent victims based on religion, according to the F.B.I. data. But the increases in attacks on these groups were smaller than the rise in attacks against Muslims and transgender people.</p> 
 </div>
 <div class="story-body story-body-2">
 <p class="story-body-text story-content" data-para-count="250" data-total-count="1872" id="story-continues-3">Over all, 59 percent of the hate crimes that the F.B.I. recorded were based on the victims’ race, ethnicity or ancestry. Religious bias accounted for about 20 percent of all attacks, and about 18 percent of attacks were based on sexual orientation.</p><p class="story-body-text story-content" data-para-count="251" data-total-count="2123">Law enforcement officials acknowledge that the statistics give an incomplete picture because many local agencies still have a spotty record of reporting hate crimes, 26 years after Congress directed the Justice Department to begin collecting the data.</p><p class="story-body-text story-content" data-para-count="321" data-total-count="2444">“We need to do a better job of tracking and reporting hate crime to fully understand what is happening in our communities and how to stop it,” James B. Comey, the F.B.I. director, said Monday. The F.B.I. regards the prosecution of hate crimes under federal jurisdiction as the top priority of its civil rights branch.</p><p class="story-body-text story-content" data-para-count="192" data-total-count="2636">Since the election, hate crime monitors like the Southern Poverty Law Center have reported a rash of verbal or physical abuse targeting minorities and others at schools, mosques and elsewhere.</p><p class="story-body-text story-content" data-para-count="95" data-total-count="2731">Some supporters of President-elect <a class="meta-per" href="http://www.nytimes.com/topic/person/donald-trump?inline=nyt-per" title="More articles about Donald J. Trump.">Donald J. Trump</a>, however, say they too have been victimized.</p><footer class="story-footer story-content">
@@ -56,7 +54,7 @@
 </p>
 </div><!-- close story-meta -->
 </footer>
-<a class="visually-hidden skip-to-text-link" href="#whats-next">Continue reading the main story</a>
+
 </div>
 <div class="story-body">
 <h2 class="headline">
