--- a/articles_parsed_with_html/transgender-students-trump-obama.html
+++ b/articles_parsed_with_html/transgender-students-trump-obama.html
@@ -15,17 +15,15 @@
 </figure>
 
 <p class="story-body-text story-content" data-para-count="205" data-total-count="205">WASHINGTON — President Trump appears on the verge of reversing protections put in place by the Obama administration to stop discrimination against transgender students in schools, officials said Tuesday.</p><p class="story-body-text story-content" data-para-count="227" data-total-count="432">Civil rights advocates said that the possible rollback of protections, which could come as soon as Wednesday, would represent a major step backward after the enormous progress made by gay and transgender people in recent years.</p><p class="story-body-text story-content" data-para-count="310" data-total-count="742">The administration signaled that an announcement was imminent on the question of whether transgender students should be able to use the bathroom of their choosing — and that Mr. Trump could well come down differently from his predecessor, President Barack Obama, a forceful advocate for transgender students.</p><p class="story-body-text story-content" data-para-count="175" data-total-count="917">Mr. Trump believes that “this is a states’ rights issue and not one for the federal government,” Sean Spicer, the White House press secretary, told reporters on Tuesday.</p><div class="story-ad ad ad-placeholder nocontent robots-nocontent " id="story-ad-1">
-<div class="accessibility-ad-header visually-hidden">
-<p>Advertisement</p>
+
+
 </div>
-<a class="visually-hidden skip-to-text-link" href="#story-continues-1">Continue reading the main story</a>
-</div>
-<p class="story-body-text story-content" data-para-count="388" data-total-count="1305" id="story-continues-1">Mr. Spicer said that officials at the Justice and Education Departments were reviewing a policy put out by the Obama administration last May that directed public schools to allow transgender students to use the bathrooms that match their gender identity. The Obama administration said that transgender students fell under the sex discrimination measures in federal funding under Title IX.</p> <a class="visually-hidden skip-to-text-link" href="#story-continues-2">Continue reading the main story</a>
+<p class="story-body-text story-content" data-para-count="388" data-total-count="1305" id="story-continues-1">Mr. Spicer said that officials at the Justice and Education Departments were reviewing a policy put out by the Obama administration last May that directed public schools to allow transgender students to use the bathrooms that match their gender identity. The Obama administration said that transgender students fell under the sex discrimination measures in federal funding under Title IX.</p> 
 </div>
 <div class="story-body story-body-2">
 <p class="story-body-text story-content" data-para-count="311" data-total-count="1616" id="story-continues-3">At the same time, the Trump administration expects to announce its legal position on a separate case before the Supreme Court brought by a transgender teenage boy in Virginia who was barred from using the boys’ bathroom at his school, Mr. Spicer said. The Obama administration had backed the boy’s position.</p><p class="story-body-text story-content" data-para-count="262" data-total-count="1878">Mr. Spicer’s assertion that the transgender question is “not one for the federal government” conflicts squarely with the view of Obama administration officials, who saw gay and transgender issues as perhaps the biggest civil rights fight of the modern era.</p><p class="story-body-text story-content" data-para-count="232" data-total-count="2110">Vanita Gupta, who led the civil rights division at the Justice Department at the end of the Obama administration, said that the indication that Mr. Trump’s administration might back away from transgender protections was troubling.</p><p class="story-body-text story-content" data-para-count="226" data-total-count="2336">“To cloak this in federalism ignores the vital and historic role that federal law plays in ensuring that all children (including L.G.B.T. students) are able to attend school free from discrimination,” she said in an email.</p><p class="story-body-text story-content" data-para-count="373" data-total-count="2709">Transgender advocates said that they worried that undoing the protections put in place by the Obama administration would open the door to further discrimination against transgender students — a group that is already the frequent target of harassment and hate crimes — and would create widespread confusion in public schools about what is allowed under federal policies.</p><p class="story-body-text story-content" data-para-count="236" data-total-count="2945">Mara Keisling, who leads the National Center for Transgender Equality, called the prospect of a retrenchment “outrageous,” and Rob Flaherty, a spokesman for the Human Rights Campaign, called it “a hugely consequential decision.”</p><div aria-labeledby="newsletter-promo-heading" class="newsletter-signup variant-1-hidden " data-newsletter-productcode="NN" data-newsletter-producttitle="Morning Briefing" id="newsletter-promo">
 <h2 class="visually-hidden" id="newsletter-promo-heading">Newsletter Sign Up</h2>
-<a class="visually-hidden skip-to-text-link" href="#continues-post-newsletter">Continue reading the main story</a>
+
 <h3 class="headline">Get the Morning Briefing by Email</h3> <p class="summary">What you need to know to start your day, delivered to your inbox Monday through Friday.</p> <form autocomplete="off" class="newsletter-form" method="post" name="regilite">
 <div class="control input-control">
 <div class="form-errors">
@@ -34,14 +32,14 @@
 <p class="error buffet-error hidden">You must select a newsletter to subscribe to.</p>
 </div>
 <div class="field-container">
-<input aria-required="true" class="email-input" id="email" name="email" placeholder="Enter your email address" type="email" value=""/>
+<input aria-required="true" class="email-input" id="email" name="email" placeholder="Enter your email address" type="email" value="">
 <button class="button submit-button" id="submit-button" type="submit">Sign Up</button>
-</div>
+</input></div>
 </div><!-- close control -->
 <div class="control checkbox-control">
 <div class="field-container">
-<input class="checkbox" id="special-offers" name="special-offers" type="checkbox" value="MM"/>
-</div>
+<input class="checkbox" id="special-offers" name="special-offers" type="checkbox" value="MM">
+</input></div>
 <div class="label-container">
 <label class="checkbox-label" for="special-offers">You agree to receive occasional updates and special offers for The New York Times's products and services.</label>
 </div>
@@ -65,16 +63,12 @@
 </div>
 <div id="#continues-post-newsletter"></div>
 <p class="story-body-text story-content" data-para-count="117" data-total-count="3062">Mr. Trump gave conflicting signals during the presidential campaign about where he stood on the transgender question.</p><div class="story-ad ad ad-placeholder nocontent robots-nocontent " id="story-ad-2">
-<div class="accessibility-ad-header visually-hidden">
-<p>Advertisement</p>
-</div>
-<a class="visually-hidden skip-to-text-link" href="#story-continues-4">Continue reading the main story</a>
+
+
 </div>
 <p class="story-body-text story-content" data-para-count="284" data-total-count="3346" id="story-continues-4">He said last April, for instance, that he supported the rights of transgender people to “use the bathroom they feel is appropriate,” and he said that Caitlyn Jenner, perhaps the most famous transgender person in the country, could use whichever bathroom at Trump Tower she wanted.</p><p class="story-body-text story-content" data-para-count="248" data-total-count="3594">But when the Obama administration put in place its anti-discrimination policy on transgender students weeks later, Mr. Trump indicated that he thought it had overreached and that the matter was better left to the states than the federal government.</p><p class="story-body-text story-content" data-para-count="226" data-total-count="3820">Attorney General Jeff Sessions is widely seen as hostile to gay and transgender rights, and his record on civil rights issues in general came under sharp attack from Democrats during his bruising confirmation fight this month.</p><p class="story-body-text story-content" data-para-count="327" data-total-count="4147">Mr. Sessions, pressed at his confirmation hearing about his past votes in the Senate against measures on gay rights protection, pledged that “I understand the demands for justice and fairness made by our L.G.B.T. community. I will ensure that the statutes protecting their civil rights and their safety are fully enforced.”</p><p class="story-body-text story-content" data-para-count="64" data-total-count="4211">The Justice Department declined to comment on the issue Tuesday.</p><p class="story-body-text story-content" data-para-count="289" data-total-count="4500">The department is eager to move quickly in laying out its legal position on transgender policy to avoid confusion in cases now moving through the courts, according to an administration official speaking on condition of anonymity because he was not authorized to discuss the issue publicly.</p><p class="story-body-text story-content" data-para-count="441" data-total-count="4941">One filing deadline is coming up this Thursday in the case now before the Supreme Court involving the Virginia transgender boy, Gavin Grimm. He sued the Gloucester County School Board two years ago after the board refused to allow him to use the boys’ bathroom and told him he could use a separate bathroom in a converted janitors closet. The Obama administration had rejected that type of accommodation as unacceptable and discriminatory.</p><p class="story-body-text story-content" data-para-count="345" data-total-count="5286">The Court of Appeals for the Fourth Circuit ruled in the boy’s favor in August. The Supreme Court is scheduled to hear oral arguments in the case next month, but Mr. Spicer’s comments at the White House on Tuesday indicated that the federal government would withdraw its support for the boy by the time the Supreme Court considered the case.</p><p class="story-body-text story-content" data-para-count="288" data-total-count="5574">In a separate case in Texas, the Justice Department said earlier this month that it was dropping its challenge to a nationwide injunction imposed by a judge that blocked the Obama administration’s guidance to schools last year on allowing transgender students to choose their bathrooms.</p><div class="story-ad ad ad-placeholder nocontent robots-nocontent " id="story-ad-3">
-<div class="accessibility-ad-header visually-hidden">
-<p>Advertisement</p>
-</div>
-<a class="visually-hidden skip-to-text-link" href="#story-continues-5">Continue reading the main story</a>
+
+
 </div>
 <p class="story-body-text story-content" data-para-count="267" data-total-count="5841" id="story-continues-5">The procedural move in the Texas case indicated at least a partial retreat on the issue, but civil rights advocates say they believe that the Trump administration plans to backpedal much more severely by dropping Mr. Obama’s transgender policy for schools entirely.</p><p class="story-body-text story-content" data-para-count="273" data-total-count="6114">James Essecks, an American Civil Liberties Union lawyer who is representing Gavin, said that while he was hopeful that the Supreme Court would detail clear legal protections for transgender students, the apparent retreat by the new administration was troubling nonetheless.</p><p class="story-body-text story-content" data-para-count="201" data-total-count="6315">“It’s astounding to me that this administration would decide that it’s going to stop standing up for young children in crisis,” he said. “That’s a bad development any way you look at it.”</p><footer class="story-footer story-content">
 <div class="story-meta">
@@ -84,5 +78,5 @@
 </p>
 </div><!-- close story-meta -->
 </footer>
-<a class="visually-hidden skip-to-text-link" href="#whats-next">Continue reading the main story</a>
+
 </div>
