--- a/articles_parsed_with_html/democrats-seize-on-acting-attorney-generals-firing-to-try-to-block-nominee.html
+++ b/articles_parsed_with_html/democrats-seize-on-acting-attorney-generals-firing-to-try-to-block-nominee.html
@@ -15,10 +15,8 @@
 </figure>
 
 <p class="story-body-text story-content" data-para-count="266" data-total-count="266">WASHINGTON — Democrats on the Senate Finance Committee sought to stall the confirmations of Steven Mnuchin and Tom Price, President Trump’s picks for Treasury secretary and secretary of health and human services, by refusing to attend scheduled votes on Tuesday.</p><p class="story-body-text story-content" data-para-count="272" data-total-count="538">As Mr. Trump’s dramatic firing of his acting attorney general threw the capital into tumult, Democrats on Tuesday also seized on the contentiousness to try to block Senator Jeff Sessions’s nomination as attorney general because they said he was too close to Mr. Trump.</p><p class="story-body-text story-content" data-para-count="339" data-total-count="877">In describing their tactic of boycotting the votes on nominees to Treasury and to health and human services, Senator Ron Wyden of Oregon said that recent news reports suggested Mr. Mnuchin and Mr. Price had given false statements in their nomination hearings. He said more information was needed before making judgments about the nominees.</p><p class="story-body-text story-content" data-para-count="77" data-total-count="954">“We have made clear that we need additional information,” Mr. Wyden said.</p><p class="story-body-text story-content" data-para-count="113" data-total-count="1067">Senator Debbie Stabenow, Democrat of Michigan, assailed the nominees for failing to be honest with the committee.</p><div class="story-ad ad ad-placeholder nocontent robots-nocontent " id="story-ad-1">
-<div class="accessibility-ad-header visually-hidden">
-<p>Advertisement</p>
-</div>
-<a class="visually-hidden skip-to-text-link" href="#story-continues-1">Continue reading the main story</a>
+
+
 </div>
 <p class="story-body-text story-content" data-para-count="83" data-total-count="1150" id="story-continues-1">“The truth matters,” she said. “That’s not what has been happening here.”</p><p class="story-body-text story-content" data-para-count="175" data-total-count="1325">Republicans expressed dismay at the delay. “I think this is a completely unprecedented level of obstruction,” said Senator Patrick J. Toomey, Republican from Pennsylvania.</p><figure aria-label="media" class="promo media video embedded layout-large-horizontal " data-adsensitivity="" data-autoplay="false" data-embedded="false" data-live="false" data-media-action="modal" data-videoid="100000004904381" role="group">
 <span class="visually-hidden">Video</span>
@@ -51,12 +49,12 @@
 </div>
 </figcaption>
 </figure>
-<p class="story-body-text story-content" data-para-count="160" data-total-count="1485">But with a Supreme Court vacancy nearing its 12-month point after a long blockade by Republicans, Democrats were not exactly feeling the heat, at least not yet.</p> <a class="visually-hidden skip-to-text-link" href="#story-continues-2">Continue reading the main story</a>
+<p class="story-body-text story-content" data-para-count="160" data-total-count="1485">But with a Supreme Court vacancy nearing its 12-month point after a long blockade by Republicans, Democrats were not exactly feeling the heat, at least not yet.</p> 
 </div>
 <div class="story-body story-body-2">
 <p class="story-body-text story-content" data-para-count="301" data-total-count="1786" id="story-continues-3">During a morning-long hearing before the Senate Judiciary Committee, Democrats painted Mr. Sessions as an extremist legal savant for Mr. Trump in support of right-wing ideologies, while Republicans portrayed him as a whip-smart lawyer and law-and-order prosecutor who would enforce the law as written.</p><p class="story-body-text story-content" data-para-count="173" data-total-count="1959">“How could we possibly conclude that this nominee will be independent?” asked Senator Dianne Feinstein of California, the top Democrat on the Senate Judiciary Committee.</p><p class="story-body-text story-content" data-para-count="226" data-total-count="2185">She said that Sally Q. Yates, the former acting attorney general fired late Monday, showed “guts” and independence in refusing to defend Mr. Trump’s executive order banning immigrants from seven largely Muslim countries.</p><p class="story-body-text story-content" data-para-count="82" data-total-count="2267">“I have no confidence that Senator Sessions will do that,” Ms. Feinstein said.</p><p class="story-body-text story-content" data-para-count="278" data-total-count="2545">Democrats hope to turn the tumult into a referendum on Mr. Sessions, an Alabama Republican, and whether he would have the independence to serve as the nation’s chief law enforcement official after emerging as one of Mr. Trump’s closest advisers in the presidential campaign.</p><p class="story-body-text story-content" data-para-count="181" data-total-count="2726">Democrats are already calling it “the Monday night massacre” after Mr. Trump fired Ms. Yates, the acting attorney general, for refusing to defend his immigration order in court.</p><div aria-labeledby="newsletter-promo-heading" class="newsletter-signup variant-1-hidden " data-newsletter-productcode="NN" data-newsletter-producttitle="Morning Briefing" id="newsletter-promo">
 <h2 class="visually-hidden" id="newsletter-promo-heading">Newsletter Sign Up</h2>
-<a class="visually-hidden skip-to-text-link" href="#continues-post-newsletter">Continue reading the main story</a>
+
 <h3 class="headline">Get the Morning Briefing by Email</h3> <p class="summary">What you need to know to start your day, delivered to your inbox Monday through Friday.</p> <form autocomplete="off" class="newsletter-form" method="post" name="regilite">
 <div class="control input-control">
 <div class="form-errors">
@@ -65,14 +63,14 @@
 <p class="error buffet-error hidden">You must select a newsletter to subscribe to.</p>
 </div>
 <div class="field-container">
-<input aria-required="true" class="email-input" id="email" name="email" placeholder="Enter your email address" type="email" value=""/>
+<input aria-required="true" class="email-input" id="email" name="email" placeholder="Enter your email address" type="email" value="">
 <button class="button submit-button" id="submit-button" type="submit">Sign Up</button>
-</div>
+</input></div>
 </div><!-- close control -->
 <div class="control checkbox-control">
 <div class="field-container">
-<input class="checkbox" id="special-offers" name="special-offers" type="checkbox" value="MM"/>
-</div>
+<input class="checkbox" id="special-offers" name="special-offers" type="checkbox" value="MM">
+</input></div>
 <div class="label-container">
 <label class="checkbox-label" for="special-offers">You agree to receive occasional updates and special offers for The New York Times's products and services.</label>
 </div>
@@ -96,10 +94,8 @@
 </div>
 <div id="#continues-post-newsletter"></div>
 <p class="story-body-text story-content" data-para-count="329" data-total-count="3055">Senator Charles E. Grassley of Iowa, the chairman of the Judiciary Committee, said in opening the hearing that there was still “no mystery” whether Mr. Sessions would be confirmed, since the Republicans hold a majority. He urged approval of Mr. Sessions as quickly as possible to restore leadership at the Justice Department.</p><div class="story-ad ad ad-placeholder nocontent robots-nocontent " id="story-ad-2">
-<div class="accessibility-ad-header visually-hidden">
-<p>Advertisement</p>
-</div>
-<a class="visually-hidden skip-to-text-link" href="#story-continues-4">Continue reading the main story</a>
+
+
 </div>
 <p class="story-body-text story-content" data-para-count="367" data-total-count="3422" id="story-continues-4">At Mr. Sessions’s nomination hearing this month, Democrats challenged him repeatedly about whether he would have the independence to stand up to Mr. Trump if the president veered into legally questionable terrain. Mr. Sessions assured the lawmakers that he would be able to “say no” to the president and would not be a “mere rubber stamp for the president.”</p><p class="story-body-text story-content" data-para-count="97" data-total-count="3519">Mr. Sessions said he was not involved in drafting the contentious executive order on immigration.</p><p class="story-body-text story-content" data-para-count="156" data-total-count="3675">Republicans showed no sign of breaking rank as they defended Mr. Sessions, a friend of many senators who served alongside a number of them on the committee.</p><p class="story-body-text story-content" data-para-count="132" data-total-count="3807">The hearing evolved into dueling portraits of what Senator Patrick J. Leahy, Democrat of Vermont, called “two different people.”</p><button class="button comments-button theme-speech-bubble-large" data-skip-to-para-id="">
 </button>
@@ -108,5 +104,5 @@
 <div class="story-info"><p><em>Follow The New York Times’s politics and Washington coverage on <a href="https://www.facebook.com/nytpolitics">Facebook</a> and <a href="http://twitter.com/nytpolitics">Twitter</a>, and sign up for the <a href="http://www.nytimes.com/newsletters/politics/">First Draft politics newsletter</a>.</em></p></div>
 </div><!-- close story-meta -->
 </footer>
-<a class="visually-hidden skip-to-text-link" href="#whats-next">Continue reading the main story</a>
+
 </div>
